# spacesvm-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: test-and-release.yml
api-poc/: Cargo.toml
api-poc/scripts/: start_server.sh  test_service.sh
api-poc/src/lib/: lib.rs  publicservicevm.rs  vm.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: client.rs  main.rs
crates/avalanche-proto/: Cargo.toml  README.md
crates/avalanche-proto/examples/: client.rs
crates/avalanche-proto/scripts/: examples.sh
crates/avalanche-proto/src/: grpcutil.rs  lib.rs
mini-kvvm/: Cargo.toml
mini-kvvm/src/: block.rs  block.rs.maybe  chain.rs  engine.rs  genesis.rs  handlers.rs  http.rs  kvvm.rs  lib.rs  macros.rs  network.rs  plugin.rs  publicserviceeng.rs  publicservicevm.rs  service.rs  state.rs  static_service.rs  tdata.rs  vm.rs
mini-kvvm/src/api/: mod.rs  service.rs
mini-kvvm/src/block/: builder.rs  mod.rs  state.rs
mini-kvvm/src/chain/: activity.rs  base_tx.rs  block.rs  common.rs  common_tx.rs  crypto.rs  genesis.rs  mod.rs  network.rs  serde.rs  set_tx.rs  storage.rs  txn.rs  unsigned_txn.rs  vm.rs
mini-kvvm/src/chain/tx/: base.rs  bucket.rs  decoder.rs  delete.rs  heap.rs  mod.rs  set.rs  tx.rs  unsigned.rs
mini-kvvm/src/mempool/: data.rs  mod.rs  tx_heap.rs
mini-kvvm/src/utils/: timer.rs
mini-kvvm/src/vm/: inner.rs  mod.rs  runner.rs
mini-kvvm/tests/: common.rs  integration_tests.rs
mini-kvvm/tests/api/: mod.rs
mini-kvvm/tests/vm/: client.rs  mod.rs
proto/: Cargo.toml  README.md  appsender.proto  buf.gen.yaml  buf.work.yaml  http.proto  metrics.proto  sharedmemory.proto  vm.proto
proto/examples/: server.rs
proto/protos/google/protobuf/empty/: empty.proto
proto/protos/google/protobuf/timestamp/: timestamp.proto
proto/src/: grpcutil.rs  lib.rs
scripts/: build.release.sh  build.x86_64-linux-musl.sh  mkvvm-test.sh  protobuf_codegen.sh  tests.e2e.sh  tests.unused.sh
spaces-cli/: Cargo.toml
spaces-cli/src/: main.rs
spacesvm/: Cargo.toml
spacesvm/src/api/: client.rs  mod.rs  rpc.rs  service.rs
spacesvm/src/block/: mod.rs
spacesvm/src/chain/: storage.rs
spacesvm/src/chain/tx/: claim.rs  decoder.rs  delete.rs  set.rs  tx.rs  unsigned.rs
spacesvm/src/mempool/: mod.rs
spacesvm/src/vm/: mod.rs
spacesvm/tests/: common.rs
spacesvm/tests/vm/: client.rs  mod.rs
src/: block.rs  database.rs  engine.rs  error.rs  genesis.rs  http.rs  kvvm.rs  lib.rs  plugin.rs  service.rs  util.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/src/tests/: mod.rs
