[package]
name = "mini-kvvm-rs"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "Mini key-value store VM for Avalanche in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/mini-kvvm-rs"
readme = "README.md"

[dependencies]
clap = { version = "3.1.8", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.16"
