[package]
name = "mini-kvvm-rs"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "Mini key-value store VM for Avalanche in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/mini-kvvm-rs"
readme = "README.md"

[[bin]]
name = "mini-kvvm-rs"
path = "src/bin/mini-kvvm-rs/main.rs"

[dependencies]
clap = { version = "3.1.8", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.16"
prost = "0.10.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.7.0"
