[package]
name = "mini-kvvm-rs"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "Mini key-value store VM for Avalanche in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/mini-kvvm-rs"
readme = "README.md"

[[bin]]
name = "mini-kvvm-rs"
path = "src/bin/mini-kvvm-rs/main.rs"

[dependencies]
avalanche-types = { git = "https://github.com/ava-labs/avalanche-ops", version = "0.0" } 
clap = { version = "3.1.8", features = ["cargo", "derive"] }
env_logger = "0.9.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
log = "0.4.16"
prost = "0.10.0"
prost-types = "0.10.0"
semver = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "0.7.1"
tonic-health = "0.6.0"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.7.0"
