[package]
name = "kvvm-handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/lib.rs"
name = "kvvm_handlers_lib"

[[bin]]
path = "src/bin/server-jsonrpc.rs"
name = "server-jsonrpc"

[dependencies]
tokio = { version = "1.19.2", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
jsonrpc-core = "18.0.0"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.79"
avalanche-proto = { version = "0.15.1" }
avalanche-types = { version = "0.0.20", features = ["proto"] }
avalanche-utils = { version="0.0.11", features = ["rfc3339"] }
async-trait = "0.1.56"