[package]
name = "cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "cli for issuing simple rpc commands to mini-kvvm"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
secp256k1 = { version = "0.22.1", features = ["global-context", "rand-std", "recovery"] }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-client-transports = "18.0.0"
jsonrpc-derive = "18.0"
mini-kvvm = {path = "../mini-kvvm"}