[package]
name = "mini-kvvm"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
publish = false
description = "Mini key-value store VM for Avalanche in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
readme = "README.md"

[[bin]]
name = "mini-kvvm"
path = "src/bin/mini-kvvm/main.rs"

[dependencies]
avalanche-proto = { version = "0.15.3" }
avalanche-types = { version = "0.0.27" }
clap = { version = "3.1.17", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.17"
prost = "0.11.0"
semver = "1.0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
tokio = { version = "1.20.1", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = { version = "0.8", features = ["gzip"] }
tonic-health = "0.7"
