[package]
name = "mini-kvvm"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
publish = false
description = "Mini key-value store VM for Avalanche in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
readme = "README.md"

[[bin]]
name = "mini-kvvm"
path = "src/bin/mini-kvvm/main.rs"

[dependencies]
avalanche-proto = { version = "0.16.0" }
avalanche-types = { version = "0.0.38" }
byteorder = "1.4.3"
chan = "0.1.23"
chrono = "0.4.19"
crossbeam-channel = "0.5.6"
derivative = "2.2.0"
dyn-clone = "1.0.9"
ethereum-types = { version = "0.14.0" }
clap = { version = "3.1.17", features = ["cargo", "derive"] }
env_logger = "0.9.0"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0"
log = "0.4.17"
lru = "0.8.0"
prost = "0.11.0"
radix_fmt = "1.0.0"
secp256k1 = { version = "0.22.1", features = ["global-context", "rand-std", "recovery"] }
semver = "1.0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
sha3 = "0.10.2"
tokio = { version = "1.20.1", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = { version = "0.8.1", features = ["gzip"] }
tonic-health = "0.7"
typetag = "0.2"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[dev-dependencies]
jsonrpc-tcp-server = "18.0.0"
futures-test = "0.3.24"
