[package]
name = "mini-kvvm"
version = "0.0.0"
edition = "2021"
rust-version = "1.65"
publish = false
description = "Mini key-value store VM for Avalanche in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
readme = "README.md"

[[bin]]
name = "mini-kvvm"
path = "src/bin/mini-kvvm/main.rs"

[dependencies]
avalanche-proto = { version = "0.19.0" }
avalanche-types = { version = "0.0.132", features = ["rpcchainvm"] }
byteorder = "1.4.3"
chrono = "0.4.19"
crossbeam-channel = "0.5.6"
derivative = "2.2.0"
dyn-clone = "1.0.9"
ethereum-types = { version = "0.14.0" }
clap = { version = "4.0.9", features = ["cargo", "derive"] }
eip-712 = "0.1.0"
env_logger = "0.9.0"
hex = "0.4.3"
http = "0.2.8"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0"
log = "0.4.17"
lru = "0.8.0"
prost = "0.11.0"
ripemd = "0.1.3"
semver = "1.0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
sha3 = "0.10.2"
tokio = { version = "1.21.2", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = { version = "0.8.2", features = ["gzip"] }
tonic-health = "0.7"
typetag = "0.2"

[dev-dependencies] 
jsonrpc-tcp-server = "18.0.0"
futures-test = "0.3.24"