[package]
name = "spaces-cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.65"
publish = false
description = "spacesvm cli for issuing RPC commands"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]
avalanche-types = { version = "0.0.138", features = ["subnet"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-client-transports = "18.0.0"
jsonrpc-derive = "18.0"
log = "0.4.17"
spacesvm = { path = "../spacesvm" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87" 
tokio = { version = "1.21.2", features = ["full"] }
