[package]
name = "avalanche-proto"
version = "0.15.1"
edition = "2021"
rust-version = "1.61"
publish = true
description = "Protobuf generated client and server resources for Avalanche gRPC in rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
readme = "README.md"

[features]
default = ["proto_full"]
proto_full = ["aliasreader","appsender","google_api","google_protobuf","http","http_responsewriter","io_prometheus_client","io_reader","io_writer","keystore","messenger","net_conn","plugin","rpcdb","rpcpb","sharedmemory","subnetlookup","vm"]
aliasreader = []
appsender = ["google_protobuf"]
google_api = []
google_protobuf = []
helloworld = []
http = []
http_responsewriter = ["http","google_protobuf"]
io_prometheus_client = []
io_reader = []
io_writer = []
keystore = []
messenger = []
net_conn = []
plugin = []
rpcdb = []
rpcpb = []
sharedmemory = []
subnetlookup = []
vm = ["io_prometheus_client", "google_protobuf"]

[dependencies]
bytes = "1.1.0"
chrono = "0.4.19"
prost = "0.10.4"
tonic = { version = "0.7", features = ["compression"] }

[dev-dependencies]
avalanche-proto = { path = "./", features = ["helloworld"] }
tokio = { version = "1.19.1", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = { version = "0.7", features = ["compression"] }
tonic-health = "0.6"
tonic-reflection = "0.4.0"

[build-dependencies]
protoc-gen-prost = "0.1.3"
protoc-gen-tonic = "0.1.0"

# Prevent cargo-udeps failing with the build dependencies. Without the protoc
# plugins it will fail to compile tonic-health and possibly others.
[package.metadata.cargo-udeps.ignore]
build = ["protoc-gen-prost","protoc-gen-tonic"]

# Disable doc tests
# Docs included with generated files results in failed unit tests.
[lib]
doctest = false