[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.62"
publish = false
description = "E2E tests"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-network-runner-sdk = { git = "https://github.com/ava-labs/avalanche-network-runner-sdk-rs", rev = "696d1b8" }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = [] }
