[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "E2E tests"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.4"
avalanche-network-runner-sdk = { version = "0.0.1" }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = [] }
