[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.64"
publish = false
description = "E2E tests"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.8"
avalanche-network-runner-sdk = { version = "0.3.0" }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = [] }
